--- a/gamerapp/templates/contact.html
+++ b/gamerapp/templates/contact.html
@@ -46,6 +46,7 @@
         font-size: 17px;
         border-bottom: 2px solid rgba(0,0,0, 0.12);
         background-color:#f9f9f9;
+        padding:10px;
       }
       .input-data input:focus ~ label, .contact-form-textarea textarea:focus ~ label,
       .input-data input:valid ~ label, .contact-form-textarea textarea:valid ~ label{
@@ -63,7 +64,7 @@
 
       .contact-form-textarea textarea{
         resize: none;
-        padding-top: 10px;
+        padding: 10px;
       }
       .input-data label{
         position: absolute;
@@ -184,7 +185,7 @@
                     <div class="underline"></div>
                     <label for="">Write your message</label>
                     <br />
-                    <div class="contact-form-row submit-btn">
+                    <div class="contact-form-row submit-btn" style="margin-left : -20px;">
                         <div class="input-data">
                             <div class="inner"></div>
                             <input type="submit" value="submit">
